--- a/IconFactory/IconFactory.Core/IconFactory.Templates.ini
+++ b/IconFactory/IconFactory.Core/IconFactory.Templates.ini
@@ -125,6 +125,7 @@ AppIcon-512@2x.png=1024x1024
 
 [#Xamarin.Droid]
 #https://developer.android.com/guide/practices/ui_guidelines/icon_design.html
+icon.png=256x256,60
 drawable\icon.png=72x72
 drawable\PageIcon.png=48x48
 drawable-hdpi\icon.png=72x72
